src/main/java/com/example/validation/error/validation/PhoneNumberValidator.java
package com.example.validation.error.validation;

import jakarta.validation.ConstraintValidator;
import jakarta.validation.ConstraintValidatorContext;

public class PhoneNumberValidator implements ConstraintValidator<PhoneNumberConstraint, String> {
    @Override
    public boolean isValid(String s, ConstraintValidatorContext constraintValidatorContext) {
        return s != null && s.matches("\\d+") && s.length() > 8 && s.length() < 14;
    }
}
